Update dashboard from signup/signin to calculator/about

--- a/UI-UnitTests-iOS/Dashboard/en.lproj/Dashboard.strings
+++ b/UI-UnitTests-iOS/Dashboard/en.lproj/Dashboard.strings
@@ -1,6 +1,6 @@
 
 /* Class = "UIButton"; normalTitle = "Sign Up"; ObjectID = "Gcg-Ot-sKD"; */
-"Gcg-Ot-sKD.normalTitle" = "Sign Up";
+"Gcg-Ot-sKD.normalTitle" = "About";
 
 /* Class = "UILabel"; text = "UI-UnitTests-iOS"; ObjectID = "Pkk-kD-v1W"; */
 "Pkk-kD-v1W.text" = "UI-UnitTests-iOS";
@@ -9,4 +9,4 @@
 "f1x-Lb-Uwe.title" = "Welcome";
 
 /* Class = "UIButton"; normalTitle = "Sign In"; ObjectID = "fcZ-ae-EwF"; */
-"fcZ-ae-EwF.normalTitle" = "Sign In";
+"fcZ-ae-EwF.normalTitle" = "Calculator";
